[package]
name = "hyprdim"
description = "Automatically dim windows in Hyprland when switching between them."
version = "2.2.3"
authors = ["Copyright (C) 2023 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/hyprdim"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
hyprland = { version = "=0.3.9", features = ["silent"] }
single-instance = "0.3.3"

[build-dependencies]
clap = { version = "4.4.16", features = ["derive"] }
clap_complete = "4.4.6"
clap_mangen = "0.2.17"

[dev-dependencies]
assert_cmd = "2.0.12"
rustympkglib = "0.1.1"
serde = "1.0.195"
toml = "0.8.8"
