[package]
name = "hyprdim"
description = "Automatically dim windows in Hyprland when switching between them."
version = "3.0.0"
authors = ["Copyright (C) 2023-2024 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/hyprdim"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
semver = "1.0.23"
single-instance = "0.3.3"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.ctrlc]
version = "3.4.4"
features = ["termination"]

[dependencies.hyprland]
version = "0.4.0-alpha.3"
features = ["silent"]

[build-dependencies]
clap_complete = "4.5.36"
clap_mangen = "0.2.20"

[build-dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.14"
rustympkglib = "0.1.1"
serde = "1.0.213"
toml = "0.8.12"
